conformance_test/core_language_tests/positive_tests/09_test_configurations/0901_communication_ports/NegSem_0901_Communication_ports_002.ttcn
/******************************************************************************
 * Copyright (c) ETSI 2017.
 *
 * This file is subject to copyrights owned by ETSI. Non-exclusive permission
 * is hereby granted, free of charge, to copy, reproduce and amend this file
 * under the following conditions: It is provided "as is", without warranty of any
 * kind, expressed or implied.
 * 
 * ETSI shall never be liable for any claim, damages, or other liability arising
 * from its use or inability of use.This permission does not apply to any documentation
 * associated with this file for which ETSI keeps all rights reserved. The present
 * copyright notice shall be included in all copies of whole or part of this
 * file and shall not imply any sub-license right.
 *
 * Modified by: Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:9, Ensure that it is not possible to connect a mapped port
 ** @verdict  pass reject
 ***************************************************/

/*NOTE: see Figure 7(g): connection of an already mapped port is not allowed
 * */

module NegSem_0901_Communication_ports_002{ 


    type port loopbackPort message { 
	  inout integer
	} with {extension "internal"}

	type component GeneralComp {	    	    
		  port loopbackPort p1;
		 
	}	

	type component System {	    	    
		  port loopbackPort p1;
		 
	}	

	testcase TC_NegSem_0901_Communication_ports_002() runs on GeneralComp system System {
		
		var GeneralComp v_ptc := GeneralComp.create;
		map(self:p1, system:p1);		
		connect(self:p1, v_ptc:p1); // error: mtc.p1 is already mapped to SystemComp.p1
		setverdict(pass);
	 
	}

	control{
		execute(TC_NegSem_0901_Communication_ports_002());
	}

}
